<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright (c) 2018.
  ~ Creative Commons Lizenzvertrag
  ~ CloudNet-Service-WebSocket-Extension von Phillipp Glanz ist lizenziert unter einer Creative Commons
  ~  Namensnennung - Nicht kommerziell - Keine Bearbeitungen 4.0 International Lizenz.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
        <artifactId>CloudNet-Service-Websocket-Extension</artifactId>
    <groupId>com.waldiekiste.java.projekte.cloudnet</groupId>


    <version>013</version>
    <modelVersion>4.0.0</modelVersion>

    <repositories>
        <repository>
            <id>CloudNet</id>
            <url>https://cloudnetservice.eu/repositories/</url>
        </repository>
    </repositories>
    <build>
        <finalName>${project.artifactId}-${project.version}${BuildTime}-${BRANCH}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.0.0</version>
                <executions>
                    <execution>
                        <id>timestamp-property</id>
                        <goals>
                            <goal>timestamp-property</goal>
                        </goals>
                        <configuration>
                            <name>BuildTime</name>
                            <pattern>yyyyMMddhhmm</pattern>
                            <locale>de_DE</locale>
                            <timeZone>Europe/Berlin</timeZone>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.platform</groupId>
                        <artifactId>junit-platform-surefire-provider</artifactId>
                        <version>1.1.0</version>
                    </dependency>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.1.0</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <finalName>${project.artifactId}-${project.version}${BuildTime}-${BRANCH}</finalName>
                    <appendAssemblyId>false</appendAssemblyId>

                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id> <!-- this is used for inheritance merges -->
                        <phase>package</phase> <!--  bind to the packaging phase -->
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
            <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <extensions>
            <!-- Enabling the use of SSH -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh-external</artifactId>
                <version>1.0-beta-6</version>
            </extension>
        </extensions>
    </build>
    <properties>
        <BRANCH>RELEASE</BRANCH>
    </properties>
    <dependencies>
        <dependency>
            <groupId>de.dytanic.cloudnet</groupId>
            <artifactId>cloudnet-core</artifactId>
            <version>2.1.14.2</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>